--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,11 @@
     "outDir": "./dist",
     "baseUrl": "./",
     "incremental": true,
-    "paths": {}
+    "paths": {
+      "bl/packet-types": ["libs/types/packet-types/src"],
+      "bl/packet-types/*": ["libs/types/packet-types/src/*"],
+      "bl/devices-types": ["libs/types/devices-types/src"],
+      "bl/devices-types/*": ["libs/types/devices-types/src/*"]
+    }
   }
 }
