--- a/package.json
+++ b/package.json
@@ -18,25 +18,48 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./apps/nova-microservices/test/jest-e2e.json"
+    "test:e2e": "jest --config ./apps/nova-microservices/test/jest-e2e.json",
+    "docs": "npx compodoc -p tsconfig.json -s"
   },
   "dependencies": {
     "@nestjs/common": "^7.0.0",
     "@nestjs/core": "^7.0.0",
     "@nestjs/microservices": "^7.2.0",
+    "@nestjs/mongoose": "^7.0.1",
+    "@nestjs/passport": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
+    "@nestjs/platform-socket.io": "^7.2.0",
+    "@nestjs/serve-static": "^2.1.3",
+    "@nestjs/swagger": "^4.5.11",
+    "@nestjs/websockets": "^7.2.0",
+    "bcrypt": "^5.0.0",
+    "class-transformer": "^0.2.3",
+    "class-validator": "^0.12.2",
+    "helmet": "^3.23.1",
+    "jwt-simple": "^0.5.6",
+    "mongoose": "^5.9.20",
+    "mqtt": "^4.1.0",
     "nats": "^1.4.9",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
+    "redis": "^3.0.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.5.4"
+    "rxjs": "^6.5.4",
+    "swagger-ui-express": "^4.1.4"
   },
   "devDependencies": {
+    "@compodoc/compodoc": "^1.1.11",
     "@nestjs/cli": "^7.0.0",
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.0.0",
     "@types/express": "^4.17.3",
     "@types/jest": "25.2.3",
+    "@types/mongoose": "^5.7.27",
     "@types/node": "^13.9.1",
+    "@types/passport-local": "^1.0.33",
+    "@types/socket.io": "^2.1.8",
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "3.0.2",
     "@typescript-eslint/parser": "3.0.2",
