--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,8 @@ services:
     volumes:
       - ./node_modules:/app/node_modules
       - ./apps/epts:/app/apps/epts
+    environment: 
+      - CHOKIDAR_USEPOLLING=true
   pt:
     build:
       context: .
@@ -25,3 +27,16 @@ services:
     volumes:
       - ./node_modules:/app/node_modules
       - ./apps/protocol-transformer:/app/apps/protocol-transformer
+    environment: 
+      - CHOKIDAR_USEPOLLING=true
+  cmx:
+    build:
+      context: .
+      dockerfile: Dockerfile.cmx.dev
+    ports:
+      - '5000:3003'
+    volumes:
+      - ./node_modules:/app/node_modules
+      - ./apps/cmx:/app/apps/cmx
+    environment: 
+      - CHOKIDAR_USEPOLLING=true
